update repo details

--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "backend-code-nodejs",
+  "name": "aia-test-be",
   "version": "1.0.0",
   "main": "app.js",
-  "repository": "git@personal:Four-Films-In-A-Box/backend-code-nodejs.git",
   "author": "baadillahnabil <nabilzero27@gmail.com>",
   "license": "Copyright",
   "private": true,
